Ajout des reseaux sociaux.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="coloneDroite">
         <div class="carte">
-          <h2>About Me</h2>
+          <h2>Président de la compagnie</h2>
           <div class="fakeimg" style="height: 100px">Image</div>
           <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         </div>
@@ -56,8 +56,12 @@
           <img class="imageCarte" src="images/imageCoding.png" />
         </div>
         <div class="carte">
-          <h3>Follow Me</h3>
-          <p>Some text..</p>
+          <h3>Nos réseaux sociaux</h3>
+          <img src="images/facebook.png" width="70px" />
+          <img src="images/insta.webp" width="45px" />
+          <img src="images/twitch.png" width="50px" />
+          <img src="images/twitter.png" width="50px" />
+          <img src="images/youtube.png" width="50px" />
         </div>
       </div>
     </div>
