Ajout page Studios et Avancement accueil

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
     <div class="entete">
-      <img src="images/logoCompagnie.svg" width="200px" />
+      <a href="index.html"
+        ><img src="images/logoCompagnie.svg" width="200px"
+      /></a>
       <h3>Compagnie de jeux vidéos Québécoises !</h3>
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
       <a href="#">Services</a>
-      <a href="#">Nos Studios</a>
+      <a href="studios.html">Nos Studios</a>
       <a href="#">Carrières</a>
     </div>
 
@@ -22,34 +24,64 @@
       <div class="coloneGauche">
         <div class="carte">
           <h2>XPLUS</h2>
-          <h5>Compagnie de jeux vidéos</h5>
-          <div class="fakeimg" style="height: 200px">Image</div>
-          <p>Some text..</p>
+          <h4>Compagnie de jeux vidéos</h4>
+          <img
+            class="imageCarte"
+            src="images/imageJeuxVideoAcceuil.png"
+            width="700px"
+          />
+          <p>L'industrie du jeux vidéos existe maintenant depuis 1950.</p>
           <p>
-            Sunt in culpa qui officia deserunt mollit anim id est laborum
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco.
+            Notre compagnie, elle, a été crée en 2001 afin de pouvoir de
+            démarquer des autres compagnies de jeux vidéos pour proposer des
+            jeux de types : "First Person Shooter(FPS)", "Role-Playing
+            Game(RPG)"
           </p>
         </div>
         <div class="carte">
-          <h2>TITLE HEADING</h2>
-          <h5>Title description, Sep 2, 2017</h5>
-          <div class="fakeimg" style="height: 200px">Image</div>
-          <p>Some text..</p>
+          <h2>Nos Partenaires</h2>
+          <a href="https://github.com"
+            ><img
+              class="imgPartenaire"
+              src="images/logoGitHub.png"
+              width="50px"
+          /></a>
+          <a href="https://www.ea.com/fr-ca">
+            <img class="imgPartenaire" src="images/EaLogo.png" width="90px" />
+          </a>
           <p>
-            Sunt in culpa qui officia deserunt mollit anim id est laborum
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco.
+            Nous sommes fiers d'avoir ces partenaires au sein de notre compagnie
+            !
           </p>
+          <h4>Git Hub</h4>
+
+          <a
+            >Git hub nous permet de pouvoir travailler en équipes de centaines
+            de personnes. Tout cela a travers le monde dans 5 différentes région
+            du Québec !</a
+          >
+          <h4>Nuagix</h4>
+
+          <a
+            >Nuagix nous permet d'héberger nos serveurs de jeux ! Cette
+            compagnie est Québécoise comme la notre et très fiable pour ces
+            serveurs !</a
+          >
+
+          <h4>Electronic Arts</h4>
+
+          <a
+            >Electronic Arts nous permet d'avoir un "Game design" hors norme !
+            Cette compagnie a produit les graphics de plusieurs jeux très connu
+            ! C'est donc elle qui dirige notre équipe de "Game design".</a
+          >
         </div>
       </div>
       <div class="coloneDroite">
         <div class="carte">
           <h2>Président de la compagnie</h2>
-          <div class="fakeimg" style="height: 100px">Image</div>
-          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          <img src="images/president.PNG" width="150px" />
+          <p>Le président de la compagnie est William Stancu.</p>
         </div>
         <div class="carte">
           <h3>Popular Post</h3>
@@ -66,7 +98,13 @@
       </div>
     </div>
     <div class="footer">
-      <h2>Footer</h2>
+      <a href="index.html"
+        ><img src="images/logoCompagnie.svg" width="200px"
+      /></a>
+      <p>Site web créer par William Stancu</p>
     </div>
   </body>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script src="index.js"></script>
 </html>
