Ajout de Nos Studios

--- a/studios.html
+++ b/studios.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XPLUS - Nos Studios</title>
     <link rel="stylesheet" href="styles/base.css" />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/cupertino/jquery-ui.css"
+    />
   </head>
   <body>
     <div class="entete">
@@ -16,8 +20,117 @@
     <div class="navigation">
       <a href="index.html">Accueil</a>
       <a href="#">Services</a>
-      <a href="">Nos Studios</a>
+      <a href="studios.html">Nos Studios</a>
       <a href="#">Carrières</a>
     </div>
+
+    <div class="carte">
+      <h2>Nos Studios</h2>
+      <div id="menuAccordeon">
+        <h2>Laval</h2>
+        <div>
+          <h4>Ville de Laval</h4>
+          <img src="images/villeLaval.jpg" width="620px" height="350px" />
+          <p>
+            Le studio de laval est notre plus grande fierté car c'est le premier
+            créer de notre compagnie. Cette ville Canadienne était parfaite pour
+            notre recrutment car nous avions des Cegeps tel que Montmorency et
+            Bois-de-Boulogne qui nous offrait leur étudiants en stages et à la
+            fin de leur technique en informatique.
+          </p>
+          <h4>Notre Studio</h4>
+          <img src="images/batimentLaval.jpg" width="620px" height="350px" />
+          <p>
+            Nous avons opté pour un look naturel et sobre lors de notre premier
+            studio. Il est magnifique !
+          </p>
+          <h4>Notre environnement de travail</h4>
+          <img
+            src="images/salleTravailLaval.jpg"
+            width="620px"
+            height="350px"
+          />
+          <p>
+            Notre environnement de travail est très espacé. Il est aussi bien
+            colorer pour amener de la joie à notre équipe !
+          </p>
+        </div>
+        <h2>Saguenay</h2>
+        <div>
+          <h4>Ville du Saguenay</h4>
+          <img src="images/villeSaguenay.jpg" width="620px" height="350px" />
+          <p>
+            Le studio au Saguenay est notre plus gros studios de la compagnie.
+            C'est une ville de la région du Saguenay–Lac-Saint-Jean au Québec
+            qui correspond parfaitement au couleur de la compagnie. Nous avons
+            pu recruté des diplomé de l'Université du Québec à Chicoutimi.
+          </p>
+          <h4>Notre Studio</h4>
+          <img src="images/batimentSaguenay.jpg" width="620px" height="350px" />
+          <p>
+            Nous avons opté pour un look plus moderne avec moins de couleur.
+            L'architecture se démarque vraiment des autres et c'est notamment la
+            plus belle !
+          </p>
+          <h4>Notre environnement de travail</h4>
+          <img
+            src="images/salleTravailSaguenay.jpg"
+            width="620px"
+            height="350px"
+          />
+          <p>
+            Notre environnement de travail est très espacé. Il est aussi
+            agrémenter de plusieurs plantes pour donner une ambiance naturel.
+          </p>
+        </div>
+        <h2>Les Îles de la Madelaine</h2>
+        <div>
+          <h4>Archipel des Îles de la Madelaine</h4>
+          <img
+            src="images/villesIlesMadelaine.jpg"
+            width="620px"
+            height="350px"
+          />
+          <p>
+            Le studio aux Îles de la madelaine est notre studio le plus éloigné
+            des deux autres. C'est un archipel un archipel situé au centre du
+            golfe du Saint-Laurent, c'était un endroit parfait ! C'est un
+            endroit exotique de part sa verdure et ces montagnes. Le calme et le
+            vent de cet endroit rend la vie de nos employés plus paisible.
+          </p>
+          <h4>Notre Studio</h4>
+          <img
+            src="images/batimentIlesMadelaine.jpg"
+            width="620px"
+            height="350px"
+          />
+          <p>
+            Nous avons opté pour un look beaucoup plus coloré pour ce studio.
+            C'est une architecture hors norme permettant d'avoir une belle
+            enseigne au sein de cette belle région.
+          </p>
+          <h4>Notre environnement de travail</h4>
+          <img
+            src="images/salleTravailIlesMadelaine.jpg"
+            width="620px"
+            height="350px"
+          />
+          <p>
+            Notre environnement de travail est très espacé. Il est tout blanc
+            qui est une couleur qui aide à la concentration et la paix.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <a href="index.html"
+        ><img src="images/logoCompagnie.svg" width="200px"
+      /></a>
+      <p>Site web créer par William Stancu</p>
+    </div>
   </body>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script src="index.js"></script>
 </html>
