Ajout gallerie image

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <a href="index.html"
         ><img src="images/logoCompagnie.svg" width="200px"
       /></a>
-      <h3>Compagnie de jeux vidéos Québécoises !</h3>
+      <h3>Compagnie de jeux vidéos Québécoise !</h3>
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
       <a href="#">Services</a>
       <a href="studios.html">Nos Studios</a>
-      <a href="#">Carrières</a>
+      <a href="carriere.html">Carrières</a>
     </div>
 
     <div class="rangee">
@@ -40,15 +40,18 @@
         </div>
         <div class="carte">
           <h2>Nos Partenaires</h2>
-          <a href="https://github.com"
-            ><img
-              class="imgPartenaire"
-              src="images/logoGitHub.png"
-              width="50px"
-          /></a>
-          <a href="https://www.ea.com/fr-ca">
-            <img class="imgPartenaire" src="images/EaLogo.png" width="90px" />
-          </a>
+          <div id="partenaires">
+            <a href="https://github.com"
+              ><img
+                class="imgPartenaire"
+                src="images/logoGitHub.png"
+                width="50px"
+            /></a>
+            <h5 id="nuagixPartenaire">nuagix</h5>
+            <a href="https://www.ea.com/fr-ca">
+              <img class="imgPartenaire" src="images/EaLogo.png" width="90px" />
+            </a>
+          </div>
           <p>
             Nous sommes fiers d'avoir ces partenaires au sein de notre compagnie
             !
@@ -72,8 +75,8 @@
 
           <a
             >Electronic Arts nous permet d'avoir un "Game design" hors norme !
-            Cette compagnie a produit les graphics de plusieurs jeux très connu
-            ! C'est donc elle qui dirige notre équipe de "Game design".</a
+            Cette compagnie a produit les graphiques de plusieurs jeux très
+            connu ! C'est donc elle qui dirige notre équipe de "Game design".</a
           >
         </div>
       </div>
