--- a/studios.html
+++ b/studios.html
@@ -21,7 +21,7 @@
       <a href="index.html">Accueil</a>
       <a href="#">Services</a>
       <a href="studios.html">Nos Studios</a>
-      <a href="#">Carrières</a>
+      <a href="carriere.html">Carrières</a>
     </div>
 
     <div class="carte">
