Page Nous contacter

--- a/carriere.html
+++ b/carriere.html
@@ -15,22 +15,52 @@
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
-      <a href="#">Services</a>
       <a href="studios.html">Nos Studios</a>
-      <a href="#">Carrières</a>
+      <a href="carriere.html">Carrières</a>
+      <a href="contacter.html">Nous Contacter</a>
     </div>
     <div class="carte">
       <h2>Cliquez pour voir leur description !</h2>
       <div class="imageEmployee">
-        <img src="images/president.PNG" width="150" class="mini" />
-        <img src="images/programmeurSenior.jpg" width="150" class="mini" />
-        <img src="images/designerSenior.webp" width="150" class="mini" />
-        <img src="images/directeurAudio.jpg" width="150" class="mini" />
-        <img src="images/artisteSenior.png" width="150" class="mini" />
-        <img src="images/directriceAnimation.jpg" width="150" class="mini" />
-        <br />
+        <img
+          id="president"
+          src="images/president.PNG"
+          width="150"
+          class="mini"
+        />
+        <img
+          id="programmeurS"
+          src="images/programmeurSenior.jpg"
+          width="150"
+          class="mini"
+        />
+        <img
+          id="designerS"
+          src="images/designerSenior.webp"
+          width="150"
+          class="mini"
+        />
+        <img
+          id="directeurA"
+          src="images/directeurAudio.jpg"
+          width="150"
+          class="mini"
+        />
+        <img
+          id="artisteS"
+          src="images/artisteSenior.png"
+          width="150"
+          class="mini"
+        />
+        <img
+          id="directriceA"
+          src="images/directriceAnimation.jpg"
+          width="150"
+          class="mini"
+        />
+
         <img id="grande-img" height="450" width="650" src="" />
-        <div class="paragraphePresident">
+        <div id="paragrapheEmployee">
           <h3>William Stancu</h3>
           <p>
             Notre président de la compagnie se démarque par son leadership et sa
@@ -39,12 +69,13 @@
             informatique à l'ETS.
           </p>
         </div>
-        <div class="paragrapheProgrammeurSenior"></div>
-        <div class="paragrapheDesignerSenior"></div>
-        <div class="paragrapheDirecteurAudio"></div>
-        <div class="paragrapheArtisteSenior"></div>
-        <div class="paragrapheDirectriceAnimation"></div>
       </div>
+    </div>
+    <div class="footer">
+      <a href="index.html"
+        ><img src="images/logoCompagnie.svg" width="200px"
+      /></a>
+      <p>Site web créer par William Stancu</p>
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
