--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
-      <a href="#">Services</a>
       <a href="studios.html">Nos Studios</a>
       <a href="carriere.html">Carrières</a>
+      <a href="contacter.html">Nous Contacter</a>
     </div>
 
     <div class="rangee">
@@ -87,7 +87,12 @@
           <p>Le président de la compagnie est William Stancu.</p>
         </div>
         <div class="carte">
-          <h3>Popular Post</h3>
+          <h3>Nos langages de programmations</h3>
+          <ul id="langages">
+            <li>C++</li>
+            <li>Node.js</li>
+            <li>MySQL</li>
+          </ul>
           <img class="imageCarte" src="images/imageCoding.png" />
         </div>
         <div class="carte">
