--- a/studios.html
+++ b/studios.html
@@ -19,9 +19,9 @@
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
-      <a href="#">Services</a>
       <a href="studios.html">Nos Studios</a>
       <a href="carriere.html">Carrières</a>
+      <a href="contacter.html">Nous Contacter</a>
     </div>
 
     <div class="carte">
