--- a/carriere.html
+++ b/carriere.html
@@ -11,7 +11,7 @@
       <a href="index.html"
         ><img src="images/logoCompagnie.svg" width="200px"
       /></a>
-      <h3>Compagnie de jeux vidéos Québécoises !</h3>
+      <h3>Compagnie de jeux vidéos Québécoise !</h3>
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
@@ -21,45 +21,47 @@
     </div>
     <div class="carte">
       <h2>Cliquez pour voir leur description !</h2>
-      <div class="imageEmployee">
-        <img
-          id="president"
-          src="images/president.PNG"
-          width="150"
-          class="mini"
-        />
-        <img
-          id="programmeurS"
-          src="images/programmeurSenior.jpg"
-          width="150"
-          class="mini"
-        />
-        <img
-          id="designerS"
-          src="images/designerSenior.webp"
-          width="150"
-          class="mini"
-        />
-        <img
-          id="directeurA"
-          src="images/directeurAudio.jpg"
-          width="150"
-          class="mini"
-        />
-        <img
-          id="artisteS"
-          src="images/artisteSenior.png"
-          width="150"
-          class="mini"
-        />
-        <img
-          id="directriceA"
-          src="images/directriceAnimation.jpg"
-          width="150"
-          class="mini"
-        />
+      <div>
+        <div class="imageEmployee">
+          <img
+            id="president"
+            src="images/president.PNG"
+            width="150"
+            class="mini"
+          />
+          <img
+            id="programmeurS"
+            src="images/programmeurSenior.jpg"
+            width="150"
+            class="mini"
+          />
+          <img
+            id="designerS"
+            src="images/designerSenior.webp"
+            width="150"
+            class="mini"
+          />
+          <img
+            id="directeurA"
+            src="images/directeurAudio.jpg"
+            width="150"
+            class="mini"
+          />
+          <img
+            id="artisteS"
+            src="images/artisteSenior.png"
+            width="150"
+            class="mini"
+          />
+          <img
+            id="directriceA"
+            src="images/directriceAnimation.jpg"
+            width="150"
+            class="mini"
+          />
+        </div>
 
-        <img id="grande-img" height="450" width="650" src="" />
+        <img id="grande-img" height="50%" width="50%" src="" />
         <div id="paragrapheEmployee">
           <h3>William Stancu</h3>
           <p>
