--- a/contacter.html
+++ b/contacter.html
@@ -19,7 +19,7 @@
       <a href="index.html"
         ><img src="images/logoCompagnie.svg" width="200px"
       /></a>
-      <h3>Compagnie de jeux vidéos Québécoises !</h3>
+      <h3>Compagnie de jeux vidéos Québécoise !</h3>
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
@@ -28,6 +28,7 @@
       <a href="contacter.html">Nous Contacter</a>
     </div>
     <div class="carte">
+      <button class="boutonCouleur" type="button">Tout effacer !</button>
       <h1>Nous Contacter</h1>
       <input type="text" placeholder="Entrer votre nom" id="nom" />
       <br /><br />
@@ -41,7 +42,9 @@
       <br />
          
       <select id="pays">
-        <option disabled selected value>-- sélectionner votre pays --</option>
+        <option disabled selected value="default">
+          -- sélectionner votre pays --
+        </option>
         <option value="Canada">Canada</option>
         <option value="EtatsUnis">États-Unis</option>
         <option value="France">France</option>
