--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="coloneDroite">
         <div class="carte">
           <h2>Président de la compagnie</h2>
-          <img src="images/president.PNG" width="150px" />
+          <img src="images/presidentAccueil.PNG" width="150px" />
           <p>Le président de la compagnie est William Stancu.</p>
         </div>
         <div class="carte">
