--- a/studios.html
+++ b/studios.html
@@ -15,7 +15,7 @@
       <a href="index.html"
         ><img src="images/logoCompagnie.svg" width="200px"
       /></a>
-      <h3>Compagnie de jeux vidéos Québécoises !</h3>
+      <h3>Compagnie de jeux vidéos Québécoise !</h3>
     </div>
     <div class="navigation">
       <a href="index.html">Accueil</a>
